# faiss-mobile

./: .gitignore  FAISS.podspec  FAISS_C.podspec  LICENSE  Package.swift  README.MD  TROUBLESHOOTING.md  faiss-android.sh  faiss.sh
.github/workflows/: build.yml  validate.yml
android/: README.md
android/jni/: CMakeLists.txt  faiss_jni.c
carthage/: faiss-c-static-xcframework.json  faiss-static-xcframework.json
examples/FAISS-Android/: README.md  build.gradle  settings.gradle
examples/FAISS-Android/app/: build.gradle
examples/FAISS-Mac-Objective-C/: README.md
examples/FAISS-Mac-Objective-C++/: README.md
examples/FAISS-Mac-Objective-C++/FAISS-Mac-Objective-C++.xcodeproj/: project.pbxproj
examples/FAISS-Mac-Objective-C/FAISS-Mac-Objective-C/: main.m  main.mm
examples/FAISS-Mac-Objective-C/FAISS-Mac-Objective-C.xcodeproj/: project.pbxproj
examples/FAISS-Mac-Swift/: README.md
examples/FAISS-Mac-Swift/FAISS-Mac-Swift/: BridgingHeader.h  main.swift
examples/FAISS-Mac-Swift/FAISS-Mac-Swift.xcodeproj/: project.pbxproj
examples/FAISS-iOS-Objective-C/: README.md
examples/FAISS-iOS-Objective-C/FAISS-iOS-Objective-C/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
examples/FAISS-iOS-Objective-C/FAISS-iOS-Objective-C.xcodeproj/: project.pbxproj
examples/FAISS-iOS-Swift/: README.md
examples/FAISS-iOS-Swift/FAISS-iOS-Swift.xcodeproj/: project.pbxproj
extra/: CMakeLists.patch  ios.toolchain.cmake.195  update-carthage.js
faiss/c_api/: CMakeLists.txt
(+13 files in other folders)
